# libfsm

./: CMakeLists.txt
src/fsm/: main.c  wordgen.c
src/libfsm/vm/: ir.c
